--- a/index.html
+++ b/index.html
@@ -1,500 +1,168 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Safe Marine - Premium Maritime Logistics</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap');
-
-    /* Reset */
-    * {
-      margin: 0; padding: 0; box-sizing: border-box;
-    }
-    body, html {
-      height: 100%;
-      font-family: 'Open Sans', sans-serif;
-      background: linear-gradient(135deg, #001f3f, #004080);
-      overflow-x: hidden;
-      color: #e0f7fa;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      position: relative;
-    }
-
-    /* Ocean waves background with subtle animation */
-    #wave-background {
-      position: fixed;
-      bottom: 0; left: 0; right: 0;
-      height: 300px;
-      pointer-events: none;
-      z-index: 0;
-      overflow: hidden;
-    }
-    #wave-background svg {
-      width: 200%;
-      height: 300px;
-      animation: waveMove 20s linear infinite;
-      transform-origin: center bottom;
-      opacity: 0.4;
-      filter: drop-shadow(0 4px 8px rgba(0, 80, 120, 0.3));
-    }
-    @keyframes waveMove {
-      0% { transform: translateX(0) }
-      100% { transform: translateX(-50%) }
-    }
-
-    /* Container */
-    .container {
-      max-width: 1080px;
-      margin: 0 auto;
-      padding: 0 25px;
-      position: relative;
-      z-index: 10;
-    }
-
-    /* Header */
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 25px 0;
-      background: rgba(255 255 255 / 0.07);
-      backdrop-filter: saturate(180%) blur(15px);
-      border-radius: 14px;
-      box-shadow: 0 0 30px rgba(0,0,0,0.3);
-      margin-top: 25px;
-      animation: fadeSlideIn 1s ease forwards;
-    }
-    header .logo {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      font-size: 2.4rem;
-      letter-spacing: 4px;
-      color: #00bcd4;
-      text-shadow: 0 2px 8px rgba(0, 188, 212, 0.8);
-      user-select: none;
-    }
-    nav a {
-      color: #b2ebf2;
-      margin-left: 30px;
-      font-weight: 600;
-      font-size: 1.1rem;
-      position: relative;
-      transition: color 0.3s ease;
-      text-decoration: none;
-    }
-    nav a::after {
-      content: '';
-      position: absolute;
-      width: 0%;
-      height: 2px;
-      bottom: -4px;
-      left: 0;
-      background: #00bcd4;
-      transition: width 0.3s ease;
-      border-radius: 2px;
-    }
-    nav a:hover {
-      color: #00bcd4;
-    }
-    nav a:hover::after {
-      width: 100%;
-    }
-
-    /* Hero */
-    .hero {
-      margin-top: 80px;
-      padding: 60px 20px;
-      text-align: center;
-      color: #e0f7fa;
-      animation: fadeSlideIn 1.2s ease forwards;
-    }
-    .hero h1 {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 4rem;
-      font-weight: 900;
-      text-shadow: 0 0 15px rgba(0, 188, 212, 0.7);
-      margin-bottom: 20px;
-      user-select: none;
-    }
-    .hero p {
-      font-size: 1.3rem;
-      margin-bottom: 40px;
-      color: #b2ebf2cc;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-      line-height: 1.5;
-      user-select: none;
-    }
-    .btn-primary {
-      position: relative;
-      display: inline-block;
-      background: linear-gradient(135deg, #00bcd4, #0097a7);
-      padding: 18px 50px;
-      border-radius: 50px;
-      color: #001f27;
-      font-weight: 700;
-      font-size: 1.3rem;
-      cursor: pointer;
-      overflow: hidden;
-      box-shadow: 0 10px 30px rgba(0, 188, 212, 0.7);
-      transition: transform 0.3s ease;
-      user-select: none;
-    }
-    .btn-primary:hover {
-      transform: scale(1.05);
-      box-shadow: 0 15px 45px rgba(0, 188, 212, 0.9);
-    }
-    .btn-primary::after {
-      content: "";
-      position: absolute;
-      width: 120%;
-      height: 120%;
-      background: rgba(255 255 255 / 0.3);
-      top: -110%;
-      left: -10%;
-      transform: rotate(45deg);
-      transition: top 0.5s ease;
-      pointer-events: none;
-    }
-    .btn-primary:hover::after {
-      top: 100%;
-    }
-
-    /* Sections common */
-    section {
-      margin: 80px 0;
-      background: rgba(255 255 255 / 0.08);
-      border-radius: 20px;
-      padding: 50px 40px;
-      box-shadow: 0 0 40px rgba(0,0,0,0.3);
-      animation: fadeSlideInUp 1.5s ease forwards;
-      max-width: 900px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    section h2 {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 2.8rem;
-      margin-bottom: 35px;
-      color: #00bcd4;
-      text-align: center;
-      user-select: none;
-      text-shadow: 0 0 10px rgba(0, 188, 212, 0.7);
-    }
-    section p {
-      font-size: 1.2rem;
-      line-height: 1.7;
-      color: #b2ebf2cc;
-      text-align: center;
-      user-select: none;
-    }
-
-    /* Services Cards */
-    .service-cards {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      flex-wrap: wrap;
-    }
-    .card {
-      background: rgba(0, 188, 212, 0.15);
-      backdrop-filter: saturate(180%) blur(10px);
-      border-radius: 18px;
-      box-shadow: 0 8px 25px rgba(0, 188, 212, 0.4);
-      width: 280px;
-      padding: 30px 25px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      cursor: default;
-    }
-    .card:hover {
-      transform: translateY(-12px) scale(1.03);
-      box-shadow: 0 15px 40px rgba(0, 188, 212, 0.7);
-    }
-    .card h3 {
-      font-family: 'Montserrat', sans-serif;
-      color: #00bcd4;
-      font-size: 1.5rem;
-      margin-bottom: 20px;
-      user-select: none;
-      text-shadow: 0 0 8px rgba(0, 188, 212, 0.8);
-    }
-    .card p {
-      color: #b2ebf2cc;
-      font-size: 1.05rem;
-      line-height: 1.4;
-      user-select: none;
-    }
-
-    /* Contact Form */
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 30px;
-      position: relative;
-    }
-    .floating-label-container {
-      position: relative;
-      width: 100%;
-    }
-    textarea {
-      width: 100%;
-      padding: 22px 20px 22px 20px;
-      border-radius: 15px;
-      border: none;
-      resize: vertical;
-      font-size: 1.1rem;
-      font-family: 'Open Sans', sans-serif;
-      background: rgba(255 255 255 / 0.12);
-      color: #e0f7fa;
-      box-shadow: inset 0 0 15px rgba(0, 188, 212, 0.5);
-      transition: box-shadow 0.3s ease, background 0.3s ease;
-      min-height: 140px;
-      line-height: 1.5;
-      caret-color: #00bcd4;
-      user-select: text;
-    }
-    textarea:focus {
-      outline: none;
-      background: rgba(255 255 255 / 0.25);
-      box-shadow: 0 0 20px #00bcd4;
-    }
-
-    label {
-      position: absolute;
-      left: 25px;
-      top: 22px;
-      font-size: 1rem;
-      color: #b2ebf2cc;
-      pointer-events: none;
-      user-select: none;
-      transition: 0.3s ease all;
-      font-weight: 600;
-      font-family: 'Montserrat', sans-serif;
-      text-shadow: 0 0 5px rgba(0, 188, 212, 0.6);
-    }
-    textarea:focus + label,
-    textarea:not(:placeholder-shown) + label {
-      top: -12px;
-      left: 18px;
-      font-size: 0.85rem;
-      color: #00bcd4;
-      background: rgba(0, 0, 0, 0.25);
-      padding: 0 10px;
-      border-radius: 10px;
-      text-shadow: none;
-    }
-
-    button[type="submit"] {
-      background: #00bcd4;
-      border: none;
-      padding: 18px 0;
-      border-radius: 50px;
-      font-size: 1.3rem;
-      font-weight: 700;
-      color: #001f27;
-      cursor: pointer;
-      box-shadow: 0 10px 30px rgba(0, 188, 212, 0.8);
-      overflow: hidden;
-      position: relative;
-      user-select: none;
-      transition: transform 0.3s ease, box-shadow 0.4s ease;
-    }
-    button[type="submit"]:hover {
-      transform: scale(1.08);
-      box-shadow: 0 15px 45px rgba(0, 188, 212, 1);
-    }
-    button[type="submit"]::after {
-      content: "";
-      position: absolute;
-      width: 120%;
-      height: 120%;
-      background: rgba(255 255 255 / 0.3);
-      top: -110%;
-      left: -10%;
-      transform: rotate(45deg);
-      transition: top 0.5s ease;
-      pointer-events: none;
-    }
-    button[type="submit"]:hover::after {
-      top: 100%;
-    }
-
-    /* Messages */
-    #successMessage, #errorMessage {
-      text-align: center;
-      font-weight: 700;
-      font-size: 1.05rem;
-      padding: 14px 10px;
-      border-radius: 15px;
-      display: none;
-      user-select: none;
-      margin-top: -20px;
-      margin-bottom: 10px;
-      max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    #successMessage {
-      background-color: #004d40cc;
-      color: #a5d6a7;
-      box-shadow: 0 0 15px #81c784;
-    }
-    #errorMessage {
-      background-color: #b71c1ccc;
-      color: #ef9a9a;
-      box-shadow: 0 0 15px #ef5350;
-    }
-
-    /* Footer */
-    footer {
-      text-align: center;
-      padding: 22px 0;
-      font-weight: 500;
-      font-size: 1rem;
-      color: #b2ebf2aa;
-      user-select: none;
-      margin-bottom: 40px;
-    }
-
-    /* Animations */
-    @keyframes fadeSlideIn {
-      from {
-        opacity: 0;
-        transform: translateY(-20px);
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Tic Tac Toe</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/1.0.2/tailwind.min.css"
+    />
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap");
+      * {
+        font-family: "Press Start 2P", cursive;
+        user-select: none;
       }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-    @keyframes fadeSlideInUp {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
 
-    /* Responsive */
-    @media (max-width: 760px) {
-      header {
-        flex-direction: column;
-        gap: 15px;
+      body {
+        background: #285ca1;
       }
-      nav a {
-        margin-left: 15px;
-      }
-      .hero h1 {
-        font-size: 2.8rem;
-      }
-      section {
-        padding: 40px 25px;
-      }
-      .service-cards {
-        flex-direction: column;
+
+      .ctr {
+        display: flex;
+        justify-content: center;
         align-items: center;
       }
-      .card {
-        width: 90%;
+
+      .tabel {
+        width: 480px;
+        height: 480px;
+        background: #76afd6;
+        border-radius: 100%;
+        border: 1px solid #0d152b;
+        box-shadow: -2px 20px 0 -3px #4283c4, -20px 20px #0d152b;
+        flex-direction: column;
       }
-    }
-  </style>
-</head>
-<body>
 
-  <header class="container" role="banner">
-    <div class="logo">Safe Marine</div>
-    <nav role="navigation" aria-label="Primary">
-      <a href="#services">Services</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+      .board {
+        width: 369.23px;
+        height: 369.23px;
+        background: #d3e2ea;
+        border-radius: 20px;
+        border: 1px solid #0d152b;
+        box-shadow: -10px 5px 0px -2px #192852;
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(3, 1fr);
+        gap: 8px;
+        padding: 12px;
+      }
 
-  <section class="hero container" id="hero">
-    <h1>Reliable Maritime Logistics</h1>
-    <p>Your trusted partner for efficient and secure marine freight solutions worldwide.</p>
-    <a href="#contact" class="btn-primary" role="button" aria-label="Get In Touch">Get In Touch</a>
-  </section>
+      .board > span {
+        background: #76afd6;
+        color: #fff;
+        font-size: 4em;
+        padding-left: 9px;
+        padding-top: 6px;
+        text-align: center;
+        border: 2px solid #0d152b;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        box-shadow: -1.2px 2px 0px 0px #141d4c;
+      }
 
-  <section id="services" class="container" aria-labelledby="services-title">
-    <h2 id="services-title">Our Services</h2>
-    <div class="service-cards" role="list">
-      <article class="card" role="listitem">
-        <h3>Freight Forwarding</h3>
-        <p>End-to-end logistics support, ensuring your cargo arrives safely and on time.</p>
-      </article>
-      <article class="card" role="listitem">
-        <h3>Customs Clearance</h3>
-        <p>Expert handling of all customs documentation and compliance to speed your shipments.</p>
-      </article>
-      <article class="card" role="listitem">
-        <h3>Warehousing</h3>
-        <p>Secure and modern storage solutions tailored to your inventory needs.</p>
-      </article>
-    </div>
-  </section>
+      .board > span:hover {
+        background: #6aa8d2;
+      }
 
-  <section id="about" class="container" aria-labelledby="about-title">
-    <h2 id="about-title">About Safe Marine</h2>
-    <p>Safe Marine is committed to delivering the highest standards of maritime logistics with transparency, reliability, and a customer-first approach. Our team of professionals leverage years of experience and global networks to optimize your supply chain and maximize efficiency.</p>
-  </section>
+      .board > span:active {
+        box-shadow: -1.2px 7.4px 0px -2.5px #141d4c;
+      }
 
-  <section id="contact" class="container" aria-labelledby="contact-title">
-    <h2 id="contact-title">Contact Us</h2>
-    <form id="contact-form" aria-describedby="formInstructions" novalidate>
-      <div class="floating-label-container">
-        <textarea id="message" name="message" placeholder="Name, Email & Message combined" required aria-required="true" aria-label="Your message including your name and email"></textarea>
-        <label for="message">Your Name, Email, and Message</label>
+      #reset {
+        margin-top: 14px;
+        color: #fff;
+      }
+
+      .win {
+        background: #55efc4 !important;
+      }
+    </style>
+  </head>
+  <body class="w-screen h-screen ctr">
+    <div class="tabel ctr">
+      <div class="board">
+        <span id="col-0"></span><span id="col-1"></span
+        ><span id="col-2"></span><span id="col-3"></span
+        ><span id="col-4"></span><span id="col-5"></span
+        ><span id="col-6"></span><span id="col-7"></span
+        ><span id="col-8"></span>
       </div>
-      <button type="submit">Send Message</button>
-      <div id="successMessage" role="alert">Message sent successfully!</div>
-      <div id="errorMessage" role="alert">Oops! Something went wrong.</div>
-    </form>
-  </section>
+      <button id="reset">Reset</button>
+    </div>
 
-  <footer>
-    &copy; 2025 Safe Marine. All rights reserved.
-  </footer>
+    <script>
+      'use strict';
 
-  <div id="wave-background" aria-hidden="true">
-    <svg viewBox="0 0 1440 320" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" >
-      <path fill="#00bcd4" fill-opacity="0.3" d="M0,224L48,197.3C96,171,192,117,288,90.7C384,64,480,64,576,90.7C672,117,768,171,864,176C960,181,1056,139,1152,144C1248,149,1344,203,1392,229.3L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
-      <path fill="#00bcd4" fill-opacity="0.2" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,229.3C1248,213,1344,203,1392,197.3L1440,192L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
-    </svg>
-  </div>
+      const _ = document,
+        cols = Array.from(_.querySelectorAll('.board > span')),
+        reset = _.querySelector('#reset');
+      let cur = true;
+      let arr = new Array(9).fill(null);
+      const wins = [
+        [0, 1, 2],
+        [3, 4, 5],
+        [6, 7, 8],
+        [0, 3, 6],
+        [1, 4, 7],
+        [2, 5, 8],
+        [0, 4, 8],
+        [2, 4, 6],
+      ];
 
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script>
-    emailjs.init('pK6TutXHcMet5luEj'); // Replace with your EmailJS user ID
+      function event(can) {
+        reset.addEventListener('click', fnreset);
+        for (let col of cols)
+          if (can) col.addEventListener('click', play);
+          else col.removeEventListener('click', play);
+      }
 
-    const form = document.getElementById('contact-form');
-    const successMessage = document.getElementById('successMessage');
-    const errorMessage = document.getElementById('errorMessage');
+      event(true);
 
-    form.addEventListener('submit', function(event) {
-      event.preventDefault();
-      successMessage.style.display = 'none';
-      errorMessage.style.display = 'none';
+      function play(e) {
+        const __ = e.target;
+        if (!__.innerHTML) {
+          cur = !cur;
+          __.innerHTML = cur
+            ? '<h1 name="O">O</h1>'
+            : '<h1 name="X">X</h1>';
+          move(
+            parseInt(__.id.split(/\D+/g)[1]),
+            __.childNodes[0].getAttribute('name')
+          );
+        }
+      }
 
-      emailjs.sendForm('service_2vm2h29', 'template_tujhuma', this)
-        .then(() => {
-          successMessage.style.display = 'block';
-          errorMessage.style.display = 'none';
-          form.reset();
-        })
-        .catch(() => {
-          successMessage.style.display = 'none';
-          errorMessage.style.display = 'block';
-        });
-    });
-  </script>
+      function move(ind, sign) {
+        arr[ind] = sign;
+        for (let i = 0; i < wins.length; i++) {
+          let [a, b, c] = wins[i];
+          if (cmp(arr[a], arr[b], arr[c])) {
+            event(false);
+            cols[a].classList.add('win');
+            cols[b].classList.add('win');
+            cols[c].classList.add('win');
+          }
+        }
+      }
 
-</body>
+      function cmp(a, b, c) {
+        if (a && b && c) return a === b && a === c && b === c;
+      }
+
+      function fnreset() {
+        for (let col of cols) {
+          col.classList.remove('win');
+          col.innerHTML = '';
+        }
+        arr = new Array(9).fill(null);
+        event(true);
+      }
+    </script>
+  </body>
 </html>
